# Fragenkonvertierung_Pruefung_TPSSE

./: .gitignore  README.md  requirements.txt  setup.cfg
src/tpsse_fragen_conv/: __init__.py  tpsse_fragen_conv.py
template/: TPL_004_Fragenpool_Rev0_14_07_2023.xlsx  TPL_TPSSE_14_07_2023.xlsx
template/DEKRA/: TPSSE_Fragenpool_Tool-Import.xlsx
