[metadata]
name = tpsse-fragen-conv
version = 0.1.0
author = Kai Jendrian
author_email = kai.jendrian@secorvo.de
description = Convert questions to TÜV requirements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TPSSE-Arbeitskreis/Fragenkonvertierung_Pruefung_TPSSE.git
project_urls =
    Bug Tracker = https://github.com/TPSSE-Arbeitskreis/Fragenkonvertierung_Pruefung_TPSSE/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pyyaml
    Click
    python-dotenv
    appdirs
    rich
    openpyxl

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        tpsse_fragen_conv = tpsse_fragen_conv:main